Refactor HTML and JavaScript files; introduce video player and status bar components with improved styling and event handling

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <h1>Hola</h1>
-    <video
+    <!-- <video
       src="https://www.w3schools.com/html/mov_bbb.mp4"
       controls
       id="video"
-    ></video>
+    ></video> -->
     <button id="button">Click</button>
     <script type="module" src="./src/index.js"></script>
   </body>
