Add new content to index.html; introduce a PlayerStorageTracker for managing player state; improve playback controls & UI components

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
       controls
       id="video"
     ></video> -->
+    <h1>Hol MUNDO</h1>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus
+      reprehenderit ipsa unde dolore alias consequuntur voluptate accusamus a
+      quae odio possimus cum doloremque veritatis dignissimos quod id, atque
+      deleniti eligendi?
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi praesentium,
+      asperiores, saepe iste quibusdam nesciunt ducimus ex eaque necessitatibus
+      adipisci error fugit veniam a delectus iure sapiente quod ad. Ullam!
+    </p>
     <button id="button">Click</button>
     <script type="module" src="./src/index.js"></script>
   </body>
